test/classes/initializers/siblingCall/endsInitBad.good
endsInitBad.chpl:5: In initializer:
endsInitBad.chpl:6: error: field initialization not allowed before super.init() or this.init()
